linking to signup

--- a/Front_end/landing_page.html
+++ b/Front_end/landing_page.html
@@ -120,7 +120,7 @@
           </div>
           <form class="contact__form">
             <input type="text" placeholder="Please enter your email..." />
-            <button <a = "signup.html">signup</button>
+            <button><a href="signup.html">signup</a></button>
           </form>
         </div>
       </div>
