added about page

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
               <li class="footer__link"><a href="#banner">overview</a></li>
               <li class="footer__link"><a href="#Home">Home</a></li>
               <li class="footer__link"><a href="#subjects">Subjects</a></li>
-              <li class="footer__link"><a href="#Track">About</a></li>
+              <li class="footer__link"><a href="about.html">About</a></li>
             </ul>
             <!-- socials -->
             <div class="footer__socials">
