--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
     }
 
     .github-link a {
-      color: #333;
+      color: blue;
       text-decoration: none;
     }
   </style>
@@ -103,7 +103,7 @@
 
   <div class="github-link">
     <p>To explore the codebase and contribute to the Tutor Bot project, please visit our GitHub repository:</p>
-    <a href="[insert link to GitHub repository]">GitHub Repository</a>
+    <a href="https://github.com/Flesier/Elimu_mwafaka_bot">GitHub Repository</a>
   </div>
 </body>
 </html>
